Fix spacing on top banner.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,8 +3,8 @@
 
 @import "{{ site.theme }}";
 
-header {
-    height:auto;
+.page-header {
+    padding: 1rem 1.2rem;
 }
 
 footer ul {
